Fixes CSS spacing and availability issues for breadcrumb, catalog sort, and result count blocks. (https://github.com/woocommerce/woocommerce-blocks/pull/8391)
* Reset margin on result count block

* Reset margin for catalog sort block

* reset margin and other fixes for breadcrumb block.

* Move styles to relevant files

--- a/plugins/woocommerce-blocks/assets/js/blocks/product-results-count/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-results-count/style.scss
@@ -5,5 +5,8 @@
 	.woocommerce-result-count {
 		float: none;
 		font-size: inherit;
+		// reset for margin
+		margin: auto;
 	}
 }
+
