--- a/plugins/woocommerce-blocks/assets/js/blocks/catalog-sorting/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/catalog-sorting/style.scss
@@ -7,4 +7,8 @@
 		font-size: inherit;
 		color: inherit;
 	}
+
+	.woocommerce-ordering {
+		margin: auto;
+	}
 }
